--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ services:
 before_install:
 - mvn clean
 - echo "$DOCKER_PASSWORD" | docker login  -u "$DOCKER_USERNAME" --password-stdin
-- docker pull openjdk:11-jdk-alpine
+- docker pull openjdk:openjdk11
 
 script:
 #We avoid this error :" the job exceeded the maximum log length and has been terminated "
