--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 			
 			<!-- spotify's dockerfile-maven-plugin -->
 			
-			<plugin>
+			<!-- <plugin>
 	            <groupId>com.spotify</groupId>
 	            <artifactId>dockerfile-maven-plugin</artifactId>
 	            <version>1.4.9</version>
@@ -119,7 +119,7 @@
 	 
 			    </executions>
 		    
-       		</plugin>
+       		</plugin> -->
 		</plugins>
 	</build>
 
