--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
 		      <artifactId>heroku-maven-plugin</artifactId>
 		      <version>2.0.11</version>
 		      <configuration>
-		        <appName>cicd-spring-boot-java-app</appName>
+		        <appName>managebookmark</appName>
 		        <processTypes>
 		          <web>java $JAVA_OPTS -jar -Dserver.port=$PORT ${full-artifact-name}</web>
 		        </processTypes>
