fix: temp fix for build failure

--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
 		    
        		</plugin> -->
        		<!-- jacoco-maven-plugin useful for Codecov -->
-       		<plugin>
+       		<!-- <plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.7.7.201606060606</version>
@@ -142,7 +142,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 			<!-- Useful for Heroku Deployment -->
 			
 			<plugin>
