--- a/pom.xml
+++ b/pom.xml
@@ -124,25 +124,46 @@
 		    
        		</plugin> -->
        		<!-- jacoco-maven-plugin useful for Codecov -->
-       		<!-- <plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.7.201606060606</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin> -->
+       		
+       		<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.17</version>
+			    <configuration>
+			        <forkCount>1</forkCount>
+			        <reuseForks>true</reuseForks>
+			    </configuration>
+			    <executions>
+			        <execution>
+			            <id>default-test</id>
+			            <phase>test</phase>
+			            <goals>
+			                <goal>test</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
+        
+       		<plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			    <version>0.7.6.201602180812</version>
+			    <executions>
+			        <execution>
+			            <id>jacoco-initialize</id>
+			            <goals>
+			                <goal>prepare-agent</goal>
+			            </goals>
+			        </execution>
+			        <execution>
+			            <id>jacoco-site</id>
+			            <phase>package</phase>
+			            <goals>
+			                <goal>report</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
 			<!-- Useful for Heroku Deployment -->
 			
 			<plugin>
