--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@
 #spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:bookmark;DB_CLOSE_DELAY=-1
 spring.datasource.username=bookmark
 spring.datasource.password=bookmark
+
+server.servlet.context-path=/bookmark
