--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:bookmark;DB_CLOSE_DELAY=-1
-spring.datasource.username=bookmark
-spring.datasource.password=bookmark
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:bookmark;DB_CLOSE_DELAY=-1
+#spring.datasource.username=bookmark
+#spring.datasource.password=bookmark
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 #spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.url=jdbc:mysql://localhost:3306/bookmark
