feat: implemented Group admin flow and added relationship to Group Entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.datasource.url=jdbc:h2:mem:bookmark;DB_CLOSE_DELAY=-1
 spring.datasource.username=bookmark
 spring.datasource.password=bookmark
 
-server.servlet.context-path=/bookmark
+#server.servlet.context-path=/bookmark
