--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,9 +6,9 @@
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.url=jdbc:mysql://localhost:3306/bookmark
 #spring.datasource.username=
 #spring.datasource.password=
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
