--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
-#spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.url=jdbc:mysql://localhost:3306/bookmark
-#spring.datasource.username=root
+#spring.datasource.username=
 #spring.datasource.password=
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.initialization-mode=always
+#spring.datasource.continue-on-error=true
+
+spring.datasource.url=jdbc:h2:mem:devdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:bookmark;DB_CLOSE_DELAY=-1
-spring.datasource.username=bookmark
-spring.datasource.password=bookmark
-
-#server.servlet.context-path=/bookmark
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.initialization-mode=always
+spring.datasource.continue-on-error=true
