--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,14 +1,18 @@
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:bookmark;DB_CLOSE_DELAY=-1
-#spring.datasource.username=bookmark
-#spring.datasource.password=bookmark
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-
-spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.url=jdbc:mysql://localhost:3306/bookmark
 #spring.datasource.username=
 #spring.datasource.password=
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.initialization-mode=always
+#spring.datasource.continue-on-error=true
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=always
+spring.datasource.continue-on-error=true
