--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,6 @@ spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.initialization-mode=always
+spring.jpa.generate-ddl=true
+#spring.datasource.initialization-mode=always
 spring.datasource.continue-on-error=true
