--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/bookmark
-#spring.datasource.username=
-#spring.datasource.password=
+#spring.datasource.username=root
+#spring.datasource.password=nikhil
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=none
